# SynapseMD

./: .coverage  .gitignore  AI_FEATURES_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.claude/: specialists
commands/: ai.md  child-safety.md  child-sleep.md  copd.md  cycle.md  diabetes.md  family.md  fitness.md  get-profile.md  interaction.md  male-menopause.md  medication.md  menopause.md  mental-health.md  mood.md  nutrition.md  pregnancy.md  prepare.md  profile.md  puberty.md  rehabilitation.md  sexual-health.md  sleep.md  surgery.md  tcm-constitution.md  travel-health.md  vaccine.md
data-example/: README-food-database.md  README.md  andropause-tracker.json  child-development-tracker.json  child-illness-tracker.json  child-mental-tracker.json  (+30 more)
platform/: .env.example  Dockerfile  Dockerfile.mcp  README.md  docker-compose.profiles.md  docker-compose.yml  pyproject.toml  synapsemd.db
platform/migrations/: 001_rls.sql
platform/scripts/: migrate_json_to_fhir.py
platform/synapsemd_platform/: __init__.py
platform/synapsemd_platform/ai/: __init__.py  config_defaults.py  config_store.py  data_adapter.py  history.py  prediction.py  schemas.py
platform/synapsemd_platform/anonymization/: engine.py  scrubber.py  vault_store.py
platform/synapsemd_platform/api/: main.py  schemas.py
platform/synapsemd_platform/api/routes/: admin.py  ai.py  auth.py  commands.py
platform/synapsemd_platform/audit/: events.py  kafka_sink.py
platform/synapsemd_platform/auth/: jwt.py  middleware.py
platform/synapsemd_platform/core/: config.py  context.py  database.py  vault.py
platform/synapsemd_platform/fhir/: hapi_client.py  migration.py
platform/synapsemd_platform/governance/: guardrails.py
platform/synapsemd_platform/llm/: providers.py  router.py
platform/synapsemd_platform/mcp/: __init__.py  context.py  dispatch.py  schemas.py  server.py  tools.py
platform/synapsemd_platform/models/: __init__.py  audit.py  review.py  tenant.py  user.py
platform/synapsemd_platform/observability/: metrics.py
platform/synapsemd_platform/rag/: retrieval.py
platform/synapsemd_platform/services/: ai_service.py  command_orchestrator.py  tenant_service.py
platform/tests/: test_anonymization.py  test_api_integration.py  test_fhir_migration.py  test_rag.py
(+334 files in other folders)
