[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "platform"]
addopts = [
    "--cov=synapsemd_platform",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["platform/synapsemd_platform"]
omit = [
    "platform/synapsemd_platform/models/user.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[project]
name = "synapsemd"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "synapsemd-platform @ file:./platform",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
