[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsemd-platform"
version = "0.1.0"
description = "SynapseMD enterprise health platform — multi-tenant, FHIR, PHI-safe AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "fhir.resources>=8.0.0",
    "email-validator>=2.2.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
presidio = ["presidio-analyzer>=2.2.355", "presidio-anonymizer>=2.2.355"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
synapsemd-api = "synapsemd_platform.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["synapsemd_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
